increased render target resolution. Motion Blur.

--- a/src/View360Photo/View360Photo.vcxproj
+++ b/src/View360Photo/View360Photo.vcxproj
@@ -92,6 +92,7 @@
     </ClCompile>
     <ClCompile Include="PlyReader.cpp" />
     <ClCompile Include="TexturedMeshRenderer.cpp" />
+    <ClInclude Include="Config.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="CubeRenderer.h" />
     <ClInclude Include="GdiplusHousekeeping.h" />
